实现分配器完整功能

--- a/EasyMemoryPool/EasyMemoryPool.vcxproj
+++ b/EasyMemoryPool/EasyMemoryPool.vcxproj
@@ -151,14 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Alloctor.cpp" />
+    <ClCompile Include="Allocator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemoryAlloc.cpp" />
-    <ClCompile Include="MemoryBlock.cpp" />
     <ClCompile Include="MemoryMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Alloctor.h" />
+    <ClInclude Include="Allocator.h" />
     <ClInclude Include="MemoryAlloc.h" />
     <ClInclude Include="MemoryBlock.h" />
     <ClInclude Include="MemoryMgr.h" />
