--- a/EasyMemoryPool/EasyMemoryPool.vcxproj.filters
+++ b/EasyMemoryPool/EasyMemoryPool.vcxproj.filters
@@ -18,23 +18,17 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Alloctor.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="MemoryMgr.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="MemoryBlock.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MemoryAlloc.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Allocator.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Alloctor.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="MemoryMgr.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -42,6 +36,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="MemoryAlloc.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Allocator.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
